--- a/LAB1.Rmd
+++ b/LAB1.Rmd
@@ -164,7 +164,7 @@ Please provide short answers to the following questions (and you will be asked t
 
 *  ***Short answer (1b.)*** What are the *units* of the per-capita rate of population growth, $r$? HINT: The answer is in the Gotelli book 
 
-* ***Short answer (1c.)*** What if the time step for your simulation were half-years instead of one year? How would $r$ change (i.e., if r represents per-capita growth in one year, what is the expected growth over a half-year)? HINT: just divide the rate by 2! Try it in Excel! Use both methods (eq. 16 vs equation 10) to compute population size at year 30 (that is, use both the discrete-time and continuous-time methods to compute the population size in year 30). (HINT: you should now use the half-year rate instead of the annual growth rate, and you should use 60 as the number of time steps). Do you see any difference between your answer (abundance at year 30) using the discrete-time formula (eq. 16) at a one-year time step vs. a half-year time step? Do you see any difference between your answer (abundance at year 30) using the continuous-time formula (eq. 10) at a one-year time step vs. a half-year time step? Would your discrete-time estimate of abundance at year 30 be closer to the continuous-time estimate if you used a one-month time step? [NOTE: you could test this using equation 17 with r equal to 1/12 of the value in cell D3 and number of time steps equal to 12*30]? Why or why not? [in other words, is the discrete-time estimate closer to the continuous-time abundance estimate when you use months instead of years as the time step?] 
+* ***Short answer (1c.)*** What if the time step for your simulation were half-years instead of one year? How would $r$ change (i.e., if 0.07 (7%) represents per-capita growth in one year, what is the expected growth over a half-year)? HINT: just divide the rate by 2! Try it in Excel! Use both methods (eq. 16 vs equation 10) to compute population size at year 30 (that is, use both the discrete-time and continuous-time methods to compute the population size in year 30). (HINT: you should now use the half-year rate instead of the annual growth rate, and you should use 60 as the number of time steps). Do you see any difference between your answer (abundance at year 30) using the discrete-time formula (eq. 16) at a one-year time step vs. a half-year time step? Do you see any difference between your answer (abundance at year 30) using the continuous-time formula (eq. 10) at a one-year time step vs. a half-year time step? Would your discrete-time estimate of abundance at year 30 be closer to the continuous-time estimate if you used a one-month time step? [NOTE: you could test this using equation 17 with r equal to 1/12 of the value in cell D3 and number of time steps equal to 12*30]? Why or why not? [in other words, is the discrete-time estimate closer to the continuous-time abundance estimate when you use months instead of years as the time step?] 
 
 *  ***Short answer (1d.)*** What is the difference between continuous population growth and discrete population growth? Can you think of at least one case where continuous growth (eq. 10) would be a more biologically realistic model than discrete growth (eq. 16)? Can you think of at least one case where discrete-time population growth would be a more biologically realistic model than continuous growth? Justify your answer.
 
