--- a/LECTURE6.Rmd
+++ b/LECTURE6.Rmd
@@ -53,7 +53,7 @@ So, for many species per-capita birth rate and death rate are fundamentally depe
 
 ![](spadefoot1.jpg)
 
-**Q:** Imagine you were trying to re-establish a population of spadefoot toads. You take 1000 tadpoles from a captive population and place them in a temporary wetland right after a rainstorm. What would population growth look like over the next few years, assuming the reintroduction strategy was successful? [tophat]
+**Q:** Imagine you were trying to re-establish a population of spadefoot toads, which tend to reproduce for the first time in their third year of life. You take 1000 tadpoles from a captive population and place them in a temporary wetland right after a rainstorm (to maximize survival rate). What would population growth look like over the next few years, assuming the reintroduction strategy was successful? [tophat]
 
 ## Aside: sex-structured vital rates
 
@@ -121,7 +121,7 @@ There are three main types of survivorship curves (also called survivorship sche
 
 ## In-class exercise: age-structured population growth
 
-In this exercise we will explore some facets of **age-stuctured populations**. 
+In this exercise we will explore some facets of **age-structured populations**. 
 
 1. Load up the life table from earlier in this lecture, by clicking [here](life_table.csv). Use this table to compute the **net reproductive rate, $R_0$**. This represents the expected number of female offspring produced per female over her entire lifetime. This is also known as *lifetime reproductive potential*! This can be computed as:
 
@@ -151,7 +151,7 @@ $r = \frac{ln(R_0)}{G}$ [tophat]
 
 Just looking at this equation, you see that organisms with longer generation times ($G$) have slower intrinsic rates of growth, all else being equal. 
 
-And- again as a first-order approximation - you can estimate the lambda for this population (annual multiplier) like this:
+And you can estimate the lambda for this population (annual multiplier) like this:
 
 $\lambda = e^{r}$
 
