--- a/LAB4.Rmd
+++ b/LAB4.Rmd
@@ -265,7 +265,7 @@ NOTE: Gotelli uses the term 'age class 1' to refer to individuals in their first
 
 Return to the InsightMaker model you created in Lab 3 (exercise 3 -- that is, a basic age structured population model, without the carrying capacity component you implemented in Exercise 4 of Lab 3). Your model should look something like this:
 
-![](IM11.jpg)
+![](IM_lab3.jpg)
 
 Make sure the parameters are at the original values specified in Exercise 3 of Lab 3 (before altering mortality rates as part of lab 3 question 3e). As a reminder, here they are again:
 
