--- a/LAB4.Rmd
+++ b/LAB4.Rmd
@@ -269,20 +269,22 @@ Return to the InsightMaker model you created in Lab 3 (exercise 3 -- that is, a 
 
 Make sure the parameters are at the original values specified in Exercise 3 of Lab 3 (before altering mortality rates as part of lab 3 question 3e). As a reminder, here they are again:
 
-- For recruitment, set *Recruitment rate, age 2* at 1.3 and *Recruitment rate, age 3* at 1.6.    
-- For transition rates, set *Transition rate, Age 1 to 2* at 0.5 and *Transition rate, Age 2 to 3* at 0.3. NOTE: these transition rates could also be called "survival rates"    
-- For the mortality rates, note that all individuals in the *Age 1* stock must either transition to *Age 2* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 3* stock must die- there is no *Age 4* class! 
+- For recruitment, set *Birth rate, age 1* at 1.3 and *Birth rate, age 2* at 1.6.    
+- For transition rates, set *Transition rate, Age 0 to 1* at 0.45 and *Transition rate, Age 1 to 2* at 0.35. NOTE: these transition rates could also be called "survival rates"    
+- For the mortality rates, note that all individuals in the *Age 0* stock must either transition to *Age 1* or die (mortality rates are 1 minus the corresponding transition rate). In addition, all individuals in the *Age 2* stock must die- there is no *Age 3* class! 
 
-2a. Translate this InsightMaker model into a projection matrix. This shouldn't be too difficult, but pay close attention to the difference between survival (transition to the next stage class) and mortality. In your write-up please provide your transition matrix.   
+2a. Translate this InsightMaker model into a projection matrix. This shouldn't be too difficult, but pay close attention to the difference between survival (transition to the next stage class) and mortality. Please enter your transition matrix into TopHat (I know it is difficult to make it look nice, but just do your best!).   
 
-2b. Starting with 75 individuals, all in Age class 1, project the population 20 years into the future, using both InsightMaker and R. *You don't need to show your R code or the InsightMaker model this time*- just provide graphical evidence (that is, provide two plots- one showing the results of the R simulation and the other showing the results of the InsightMaker simulation). These plots should look essentially identical! 
+2b. Starting with 75 individuals, all in Age 0, project the population 20 years into the future, using both InsightMaker and R. *You don't need to show your R code or the InsightMaker model this time*. Please provide two plots- one showing the results of the R simulation and the other showing the results of the InsightMaker simulation). These plots should look essentially identical! 
 
-
-Now let's go the other way around -- try to build an InsightMaker model based on a population matrix!
+Now let's go the other way around -- build an InsightMaker model based on a population matrix!
 
 #### Use the following stage matrix to answer questions 2c-d
 
-Click [here](stage_matrix1.csv) to download the CSV file for the code below...   
+Here is a stage-based matrix to use for building your InsightMaker model:
+
+Click [here](stage_matrix1.csv) to download the CSV file.      
+Click [here](stage_matrix1.xlsx) to download the same matrix as an Excel file.   
 
 ```{r}
 stmat <- read.csv("stage_matrix1.csv")
@@ -292,9 +294,9 @@ stmat
 
 ```
 
-2c. Build an InsightMaker model that represents the same population as the stage matrix above. Provide the URL to your InsightMaker model in your write-up (and remember to clone your Insight to ensure that you don't alter the model once you submit it) .  
+2c. Build an InsightMaker model that represents the same population as the stage-based matrix above. Provide the URL to your InsightMaker model via top hat (and remember to clone your Insight to ensure that you don't alter the model once you submit it) .  
 
-2d. Use this stage matrix to project the population 20 years into the future, starting with 100 individuals at S.A.D. No need to show your R code- simply provide a plot of projected abundance of each stage over the 20 year simulation. Do the same in InsightMaker (project the population 20 years into the future), and make sure the population dynamics look the same in R and InsightMaker. Provide both the InsightMaker and R plots to show that the two models are identical.    
+2d. Use this stage matrix to project the population 20 years into the future using b, starting with 100 individuals at S.A.D. Please provide a plot of projected abundance of each stage over the 20 year simulation. Do the same in InsightMaker (project the population 20 years into the future), and make sure the population dynamics look the same in R and InsightMaker. Provide both the InsightMaker and R plots to show that the two models are identical.    
 
 NOTE: In this class we have stressed the importance of density dependence in determining and regulating the dynamics of wild populations. Were any of the population models in this lab density-dependent? [Answer: NO!]
 
