--- a/LECTURE7.Rmd
+++ b/LECTURE7.Rmd
@@ -43,9 +43,9 @@ First of all, this lecture is full of R code (R makes it easy to run matrix popu
 
 ### Reason 1: simplify!
 
-![](IM8.jpg)
+![](IM_lab3.jpg)
 
-You might recognize this InsightMaker model from Lab 3. This represents an age-structured population with only three age classes. Imagine if there were five age classes, or 10? What if you could jump from (e.g.) stage 3 to stage 5? Or from stage 5 back to stage 3? How many lines would you have to draw, how many equations would you have to put in all the different flows? It would be tedious, and you could easily run into errors that would be very hard to debug! 
+You might recognize this InsightMaker model from Lab 3. This represents an age-structured population with only three age classes. Imagine if there were five age classes, or 10? What if you could jump from (e.g.) stage 3 to stage 5? Or from stage 5 back to stage 3? How many lines would you have to draw, how many equations would you have to put in all the different flows? It would be tedious, and you could easily run into errors that would be very hard to uncover! 
 
 ![](teasel1.jpg)
 
@@ -53,7 +53,7 @@ Consider the teasel example from our textbook. It's possible to implement this m
 
 ![](gotelli3_6.jpg)
 
-The population vital rates for pretty much any age-structured or stage-structured population can be represented as a **transition matrix** (or, projection matrix), which summarizes all the information about mortality, birth rates, and transitions between stages! (and the fact that a life history like teasel can be represented by a transition matrix illustrates the generality of this concept!)
+The population vital rates for pretty much any age-structured or stage-structured population can be represented as a **transition matrix** (or, projection matrix), which summarizes all the information about survival, birth rates, and transitions between stages! (and the fact that a life history like teasel can be represented by a transition matrix illustrates the generality of this concept!)
 
 For example, the teasel vital rates can be summarized in [this matrix](teaselmatrix1.csv):
 
@@ -72,8 +72,6 @@ teasel_matrix                                          # print the matrix
 ```
 
 Isn't that *elegant*!!
-
-We'll go into more detail about matrices later!
 
 #### Aside: stage-structure vs age-structure
 
@@ -94,19 +92,19 @@ Age 5-10: older juvenile
 Age 10-17: subadult      
 Age 18+: adult      
 
-By using stages, we have simplified our model from having 100 stocks (with even more associated flows/transitions) to a model with only 5 stocks- and we are still capturing how vital rates change with age (the model is still biologically realistic). 
+By using stages, we have simplified our model from having 100 stocks (with even more associated flows/transitions) to a model with only 5 stocks- and we are still accurately representing how vital rates change with age (the model is still biologically realistic). 
 
 Matrix population models can represent age-structured and stage-structured models with equal simplicity and elegance. 
 
-You won't be tested on this, but the commonly used 'Leslie Matrix' refers to a matrix population model that represents an age-structured population. When a matrix is used to represent a stage-structured population, it is often called a 'Lefkovitch" Matrix. 
+The term 'Leslie Matrix' refers to an age-structured matrix population model. When a matrix is used to represent a stage-structured population, it is often called a 'Lefkovitch" Matrix. 
 
 ### Reason 2: projection!
 
-In one of the questions in Lab 3, your were asked to use a life table to project the age structure of a population one time step in the future. Was it simple and straightforward to do this? (answer: NO!!)
+In one of the questions in Lab 3, your were asked to use a life table to predict the number of births in a population one time step in the future. As you probably realized, this is not as straightforward as it sounds!
 
 Life tables are great for summarizing survivorship schedules and other aspects of age-structured populations. But _life tables are not great for projecting age-structured abundance into the future_!
 
-You know what *is* great for projecting age-structured abundance into the future? (obvious answer: MATRICES!)  
+You know what *is* great for projecting age-structured abundance into the future? (MATRICES of course!)  
 
 For example, let's project a teasel population 1 year into the future:
 
@@ -200,7 +198,7 @@ legend("topleft",col=cols,lwd=rep(2,6),legend=rownames(tenYears))      # add leg
 
 ```
 
-So projection is easy with matrices!
+So projection is easy with matrices! What more reason to we need to convince ourselves of why matrix population models are worth knowing? Well, how about this...
 
 ### Reason 3: Matrix algebra tricks!
 
@@ -222,11 +220,11 @@ Both equations describe simple exponential growth or decline!
 
 **Q:** Can you see the difference between these two equations?
 
-Note that $N$ in the first equation is a **scalar** -- that is, it is just a naked number with no additional components. 
+Note that $N$ in the first equation is a **scalar** -- that is, it is just a 'naked' number. 
 
 WHEREAS,
 
-$\mathbf{N}$ in the second equation is an age-structured **vector**: a set of abundances structured by age or stage class.
+$\mathbf{N}$ in the second equation represents an age-structured **vector**: a set of abundances structured by age or stage class.
 
 Similarly, the finite population growth rate, $\lambda$ is a scalar,
 
@@ -248,26 +246,18 @@ Let's do this in R!
 
 What is the growth rate $\lambda$ for the teasel population. If you recall, it looked like it was growing, so it should be above 1...
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 
 ###########
 # Use the transition matrix to compute Lambda, or the finite rate of population growth!
 
-Lambda <- as.numeric(round(eigen(teasel_matrix)$values[1],2))
+library(popbio)      # load the 'popbio' package in R!
+Lambda <- lambda(teasel_matrix) 
 Lambda
 
-```
-
-Or we could use the handy "popbio" package in R:    
-
-```{r}
-
-
-library(popbio)      # or... it's easier to use the 'popbio' library in R!
-lambda(teasel_matrix)
+#   as.numeric(round(eigen(teasel_matrix)$values[1],2))  # this is an alternative method- if you don't want to use the 'popbio' package
 
 ```
-
 
 You don't have to understand the math here- but I do want you to understand how simple that was- just one line of code and we computed the annual rate of growth from the teasel transition matrix!
 
@@ -286,18 +276,13 @@ What is the stable age distribution for the teasel population. If you recall, th
 ##########
 # Compute stable age distribution from the transition matrix!
 
-SAD <- abs(as.numeric(round(eigen(teasel_matrix)$vectors[,1],3)))
-SAD/sum(SAD)      # stable age distribution as a percentage of the total population
-
-```
-
-Or you can use the 'popbio' package in R:
-
-```{r}
-
 library(popbio)    # ... and it's even easier if we use the 'popbio' package...
-stable.stage(teasel_matrix)
+SAD <- stable.stage(teasel_matrix)  
+SAD      # stable age distribution as a percentage of the total population
 
+
+# #abs(as.numeric(round(eigen(teasel_matrix)$vectors[,1],3)))  # alternative- doesn't use 'popbio'
+# SAD/sum(SAD)
 
 ```
 
@@ -307,7 +292,7 @@ To answer this question, you may find it helps to load an stage-structured model
 
 ## Mechanics of matrix population models
 
-Let's take a look at a basic age-structured population -- specifically the in-class example from the last lecture ([this one](https://insightmaker.com/insight/70809/Age-structured-population).). In InsightMaker it looks something like this:
+Let's take a look at a basic stage-structured population -- specifically [this one](https://insightmaker.com/insight/70809/Age-structured-population) - we used this model for running the 'supplementation' example in the 'age structured populations' lecture. In InsightMaker it looks something like this:
 
 ![](IM9.jpg)
 
@@ -438,7 +423,7 @@ Matrix population models are great, but they have some limitations too.
 
 ### What about density-dependence?
 
-In some ways, while introducing a new level of realism in our models -- age-structure -- we have been ignoring another type of realism that we introduced in earlier lectures- **density-dependence**!
+In some ways, while introducing a new level of realism in our models -- age-structure -- we have been ignoring another type of realism that we introduced in earlier lectures- **density-dependence** (both positive and negative)!
 
 Which vital rates are density-dependent? All? Some? It depends? Are the data available?
 
@@ -452,7 +437,7 @@ The reverse is NOT true: **you can not always convert InsightMaker models to mat
 
 ### Overview of matrix multiplication
 
-(we will do this on the whiteboard during lab!- I will post the video demo to webcampus!
+(we will do this on the whiteboard during lab!)
 
 ### In-class exercise: matrix projection models
 
